--- a/pangu-website/docs/advanced-guide/问题异常速查表.md
+++ b/pangu-website/docs/advanced-guide/问题异常速查表.md
@@ -1,8 +1,8 @@
 ---
-title: 问题异常速查表
-tags: [异常]
+title: 问题、异常速查表
+tags: [常见问答,异常]
 sidebar_position: 90
-slug: /advanced-guide/exception
+slug: /advanced-guide/qa
 ---
 
 :::tip 
