--- a/pangu-website/docs/致敬 & 鸣谢.md
+++ b/pangu-website/docs/致敬 & 鸣谢.md
@@ -6,7 +6,7 @@ slug: /thanks
 ---
 
 :::info
-盘古开发框架使用了很多优秀的开源项目。比如：Spring&Spring Boot、Nacos、Dubbo、ShenYu以及apache的众多开源项目等， 正是由于站在这些开源项目的肩膀上，才有盘古开发框架诞生的可能。我们也希望自己不仅是开源的受益者，也能成为开源生态的贡献者。鉴于此，特特单独列出如下盘古框架依赖到的开源基金会/社区组织、开源项目，一起为他们对开源世界所做出的卓越贡献表示致敬和感谢。
+盘古开发框架使用了很多优秀的开源项目，也正是由于站在这些开源项目的肩膀上，才有盘古开发框架诞生的可能。我们也希望不仅是开源的受益者，也能成为开源生态的贡献者。鉴于此，特单独列出如下盘古框架依赖到的开源基金会/社区组织、开源项目，为他们对开源世界所做出的卓越贡献表示致敬和感谢。
 :::
 
 ## 开源基金会/社区组织
