--- a/pangu-website/docs/quick-start/如何开发一个盘古单体应用.md
+++ b/pangu-website/docs/quick-start/如何开发一个盘古单体应用.md
@@ -47,27 +47,38 @@ import TabItem from '@theme/TabItem';
 </Tabs>
 
 ## 本地配置
-````properties
-spring.application.name=pangu-examples-webapi-local-service-based
+<Tabs>
+<TabItem value="application" label="application.properties">
 
+```jsx
+spring.profiles.active=${spring.profiles.active:dev}
+```
+</TabItem>
+<TabItem value="application-dev" label="application-dev.properties">
+
+```jsx
+spring.application.name=pangu-examples-empty-web
 spring.jackson.time-zone=GMT+8
-
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pangu-examples?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root123456
-mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-# 分页SQL方言数据库类型标识（缺省：自动识别）
-pangu.jdbc.db-type=mysql
 
 logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
 ```
+</TabItem>
+</Tabs>
 
-## 参考范例
-[pangu-examples-webapi-local-service-based](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-webapi-local-service-based)
+## 启动入口
+```jsx {4}
+@SpringBootApplication
+public class EmptyWebPanguApplication {
+	public static void main(String[] args) {
+		PanGuApplicationBuilder.init(EmptyWebPanguApplication.class).run(args);
+	}
+}
+```
+
+## 相关参考范例
+- [pangu-examples-empty-web](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-empty-web)
 
 ## 下一步
 继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+都是
