创建项目官网pang-website，编写开发指南

--- a/pangu-website/docs/社区.md
+++ b/pangu-website/docs/社区.md
@@ -8,7 +8,7 @@ slug: /community
 # 普蓝开源开发者社区
 
 :::tip
-在使用盘古开发框架的过程中，如果您发现任何问题，有新的想法、建议都可以通过如下方式参与到普蓝开源社区建设中或寻求到更多帮助。
+在使用盘古开发框架的过程中，如果您发现任何问题，有新的想法、建议都可以通过如下方式参与到普蓝开源社区建设中或寻求更多帮助。
 :::
 
 ## 开发者交流平台
