--- a/pangu-website/docs/quick-start/gateway/简单模式.md
+++ b/pangu-website/docs/quick-start/gateway/简单模式.md
@@ -67,7 +67,7 @@ import TabItem from '@theme/TabItem';
 </Tabs>
 
 :::tip
-基于SpringMVC将Dubbo微服务接口发布为WebAPI需要引入服务接口依赖包。
+基于SpringMVC的网关开发模式需要引入服务接口依赖包。
 :::
 
 ## 本地配置
@@ -135,6 +135,9 @@ public class DubboProviderApplication {
 	}
 }
 ```
+
+## 完整请求URL及参数说明
+至此，就可以通过http的方式来请求我们的的dubbo服务了。此种开发模式完全基于SpringMVC，其请求地址和参数说明等信息本教程不再展开叙述。如有需要，请自行查阅SpringMVC请求和响应的相关教程即可。
 
 ## 相关参考范例
 - [pangu-examples-dubbo-api](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-api)：服务接口包
