编写开发指南文档

--- a/pangu-website/docs/quick-start/gateway/高级模式.md
+++ b/pangu-website/docs/quick-start/gateway/高级模式.md
@@ -168,7 +168,7 @@ shenyu.sync.websocket.urls | 表示网关和ShenYu Admin之间使用Websocket的
 :::info 还有一个问题，网关要实现泛化调用是需要dubbo服务的注册中心的？
 - 没错。通过ShenYu Admin后台系统，『基础配置->插件管理』菜单，启用`dubbo插件`并填入注册中心地址。比如，我测试用的注册中心地址：`nacos://169.188.88.140:1688?namespace=pangu-dev`。如下图所示。
 :::
-[![盘古框架网关](/resources/doc/4-pangu-framework-shenyu-dubbo.png)](/resources/doc/4-pangu-framework-shenyu-dubbo.png)
+![盘古框架网关](/resources/doc/4-pangu-framework-shenyu-dubbo.png)
 
 ### 启动入口
 
@@ -231,9 +231,9 @@ public class UserServiceImpl implements UserService {
 
 **重启服务提供者：**
 - 进入ShenYu Admin后台系统的『基础配置->元数据管理』菜单，会看到自动上报的服务元数据信息。如下图所示。
-[![盘古开发网关](/resources/doc/2-pangu-framework-shenyu-metadata.png)](/resources/doc/2-pangu-framework-shenyu-metadata.png)
+![盘古开发网关](/resources/doc/2-pangu-framework-shenyu-metadata.png)
 - 进入ShenYu Admin后台系统的『插件列表->proxy->dubbo』菜单，会看到自动注册的选择器和规则信息。如下图所示。
-[![盘古开发网关](/resources/doc/3-pangu-framework-shenyu-plugin.png)](/resources/doc/3-pangu-framework-shenyu-plugin.png)
+![盘古开发网关](/resources/doc/3-pangu-framework-shenyu-plugin.png)
 
 ## 完整请求URL及参数说明
 至此，就可以通过http的方式来请求我们的的dubbo服务了。
