--- a/pangu-website/docs/quick-start/如何开发微服务应用.md
+++ b/pangu-website/docs/quick-start/如何开发微服务应用.md
@@ -132,7 +132,7 @@ public class DubboProviderApplication {
 ### 服务注册
 成功启动应用会自动像Nacos服务注册中心注册服务。登录Nacos控制台即可在【服务管理->服务列表】页查看效果。如下图所示。
 
-[![盘古开发Dubbo服务](/resources/doc/1-pangu-framework-nacos-service-regist.png)](/resources/doc/1-pangu-framework-nacos-service-regist.png)
+![盘古开发Dubbo服务](/resources/doc/1-pangu-framework-nacos-service-regist.png)
 
 ## 服务消费者
 上述服务注册到Nacos服务中心以后就可以对外提供服务了。可以在任何一个SpringBean组件中（一般是Service、Manager等），引入服务接口后就像本地接口调用一样调用远程服务。Dubbo将提供高性能的基于代理的远程调用能力，服务以接口为粒度，为开发者屏蔽远程调用底层细节。服务消费端所需要的依赖和提供端是一样的，这里不再赘述。仅给出消费相关代码。如下所示。
