编写开发指南文档

--- a/pangu-website/docs/quick-start/gateway/高级模式.md
+++ b/pangu-website/docs/quick-start/gateway/高级模式.md
@@ -203,7 +203,7 @@ shenyu.client.props.contextPath=/dubbo
 配置项 | 配置说明  
 --- | ---
 shenyu.client.register-type | 服务接口元数据采集方式，可选http直连模式或配置中心zookeeper、etcd、consul和nacos。盘古开发采集接口元数据缺省选择http直接ShenYu Admin的方式。
-shenyu.client.server-lists | ShenYu Admin地址或配置中心地址。集群时，多个地址用逗号分开。
+shenyu.client.server-lists | ShenYu Admin地址或配置中心地址。集群时多个地址用逗号分开。
 shenyu.client.props.contextPath | 本服务在网关中的路由前缀,可自定义按需配置
 
 ### 自动上报服务接口元数据
