编写开发指南文档

--- a/pangu-website/docs/社区.md
+++ b/pangu-website/docs/社区.md
@@ -12,17 +12,15 @@ slug: /community
 :::
 
 ## 开发者交流平台
-[**访问Gitee Issues**](https://gitee.com/pulanos/pangu-framework/issues?state=all) 
+**访问Gitee Issues：**[点我进入](https://gitee.com/pulanos/pangu-framework/issues?state=all) 
 
 ## 开发者社区微信群
 
-<img width="295"
+<img width="295" class="medium-zoom-image"
   src={require('/resources/wxq.jpeg').default}
   alt="普蓝开源社区微信群" />
 
 
 ## 作者联系方式
 
-<img width="270"
-  src={require('/resources/wx.jpeg').default}
-  alt="码农大熊微信" />
+**写信给我：** daxiong005@qq.com
