编写开发指南文档

--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -10,11 +10,13 @@ import TabItem from '@theme/TabItem';
 
 # 配置中心
 
-鉴于文档可读性，盘古教程和参考范例都使用的本地配置的方式。那么本文就将讲述如何将盘古应用获得基于配置中心的动态配置服务能力。
+配置中心作为分布式微服务开发的标配组件，业界已有很多成功的典型应用，如：携程Apollo分布式配置中心、百度Disconf分布式配置中心等。盘古配置中心基于阿里的Nacos提供动态配置服务。
+
+:::caution
+鉴于文档可读性，盘古教程和参考范例都使用的本地配置的方式。本文将介绍如何基于配置中心让盘古应用获得动态配置服务的能力。在实际应用中，如无特殊需求我们一般都建议采用配置中心的方式来开发。
+:::
 
 ## 配置中心概念
-
-配置中心作为分布式微服务开发的标配组件，业界已有很多成功的典型应用。如：携程Apollo分布式配置中心、百度Disconf分布式配置中心等。盘古配置中心则是基于阿里的Nacos提供动态配置服务。
 
 Nacos动态配置服务可以让您以中心化、外部化和动态化的方式管理所有环境的应用配置和服务配置。动态配置消除了配置变更时重新部署应用和服务的需要，让配置管理变得更加高效和敏捷。配置中心化管理让实现无状态服务变得更简单，让服务按需弹性扩展变得更容易。它还提供了一个简洁易用的UI帮助您管理所有的服务和应用的配置，包括配置版本跟踪、金丝雀发布、一键回滚配置等一系列开箱即用的配置管理特性，帮助您更安全地在生产环境中管理配置变更和降低配置变更带来的风险。
 
