编写开发指南文档

--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -44,7 +44,7 @@ Nacos 是构建以“服务”为中心的现代应用架构 (例如微服务范
 #### 配置集
 一组相关或者不相关的配置项的集合称为配置集。在系统中，一个配置文件通常就是一个配置集，包含了系统各个方面的配置。例如，一个配置集可能包含了数据源、线程池、日志级别等配置项。
 #### 配置集ID
-Nacos 中的某个配置集的 ID。配置集 ID 是组织划分配置的维度之一。Data ID 通常用于组织划分系统的配置集。一个系统或者应用可以包含多个配置集，每个配置集都可以被一个有意义的名称标识。Data ID 通常采用类 Java 包（如 com.xiongchun.app1）的命名规则保证全局唯一性。此命名规则非强制。
+Nacos中的某个配置集的 ID。配置集 ID 是组织划分配置的维度之一。一个系统或者应用可以包含多个配置集，每个配置集都可以被一个有意义的名称标识。（比如：使用应用名称作为 Data ID）
 #### 配置快照
 Nacos的客户端SDK会在本地生成配置的快照。当客户端无法连接到Nacos Server时，可以使用配置快照显示系统的整体容灾能力。配置快照类似于Git中的本地commit，也类似于缓存，会在适当的时机更新，但是并没有缓存过期（expiration）的概念。
 
