创建项目官网pang-website，编写网关相关开发指南

--- a/pangu-website/docs/advanced-guide/注册中心.md
+++ b/pangu-website/docs/advanced-guide/注册中心.md
@@ -1,15 +1,15 @@
 ---
 title: 注册中心
-tags: [nacos, 注册中心, Dubbo, 服务注册，服务发现]
+tags: [nacos, 注册中心, Dubbo, 服务注册, 服务发现]
 sidebar_position: 2
 slug: /advanced-guide/nacos-regist-center
 ---
 
 # 注册中心，服务注册&服务发现
 
-注册中心是分布式微服务开发的标配组件，盘古服务注册中心借助Nacos提供动态服务注册和服务发现能力。
+注册中心是分布式微服务开发的标配组件，盘古服务注册中心借助[Nacos](/docs/thanks)提供动态服务注册和服务发现能力。
 
-## 注册中心概念
+## 注册中心介绍
 
 服务注册中心是以服务为中心架构，实现服务化管理的核心组件。类似于目录服务的作用，主要用来存储服务实例信息，譬如提供者地址、路由信息等。服务注册中心是微服务架构中必选的标配基础设施之一。
 
