--- a/pangu-website/docs/advanced-guide/网关系统.md
+++ b/pangu-website/docs/advanced-guide/网关系统.md
@@ -1,7 +1,74 @@
 ---
 title: 网关系统
-tags: [网关]
+tags: [网关, ShenYu]
 sidebar_position: 3
 slug: /advanced-guide/gateway
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+# 网关系统
+
+网关是分布式微服务开发的重要组件，盘古框架借助[ShenYu](/docs/thanks)提供网关能力。
+
+:::tip
+在前文[《网关开发模式简介》](/docs/quick-start/how-to-make-gateway-app)中，已经介绍了盘古网关开发的2中模式。本文讨论的网关特指第二种基于ShenYu的专业网关开发模式。
+:::
+
+## 网关介绍
+基于ShenYu网关系统，我们不需要引入服务接口包通过Dubbo泛化调用服务接口的方式就可以将后端Dubbo服务转换为HTTP API。同时网关支持鉴权、动态限流、熔断、防火墙；支持A/B Test，灰度发布等。
+
+### 相关名词解释
+|<div style={{width:'120px'}}>名词</div> | 解释  
+--- | ---
+shenyu-admin | 网关插件和元数据信息配置管理后台。独立JAR，需要单独部署。 
+shenyu-gateway | 网关模块，代理Http请求，泛化调用后端Dubbo服务。此模块负责接收Http请求。
+数据同步 | 数据同步是指在shenyu-admin后台操作数据以后，使用何种策略将数据同步到ShenYu Gateway网关模块。ShenYu当前支持ZooKeeper、WebSocket、Http长轮询、Nacos 、Etcd 和 Consul 进行数据同步。盘古开发使用的是WebSocket方式进行数据同步。
+插件 | ShenYu使用插件化设计思想，实现插件的热插拔。内置丰富的插件，包括 RPC 代理、熔断和限流、权限认证、监控等等。
+选择器 | 每个插件可设置多个选择器，对流量进行初步筛选。
+规则 | 每个选择器可设置多个规则，对流量进行更细粒度的控制。
+
+### 网关调用结构图
+![盘古网关系统](/resources/doc/9-pangu-framework-shenyu.png)
+:::caution
+上图并非盘古应用部署架构图只是简单说明一下网关的调用链结构。对于真实应用而言，我们还需要结合具体项目背景和业务场景，考虑网关模块的性能和高可用。关于部署运维的教程可以参阅[《部署指南》](/docs/deploy-guide)章节。
+:::
+
+### ShenYu Admin图示
+ShenYu Admin 是网关的后台管理系统，能够可视化管理所有插件、选择器和规则，设置用户、角色，控制资源。它是独立JAR，需要单独部署。如下图所示。
+<Tabs>
+<TabItem value="img1" label="Dubbo插件">
+
+![Dubbo插件](/resources/doc/12-pangu-framework-shenyu.png)
+</TabItem>
+<TabItem value="img2" label="接口元数据">
+
+![接口元数据](/resources/doc/11-pangu-framework-shenyu.png)
+</TabItem>
+<TabItem value="img3" label="选择器/规则">
+
+![选择器/规则](/resources/doc/10-pangu-framework-shenyu.png)
+</TabItem>
+
+</Tabs>
+
+<details>
+  <summary><b>快速QA：</b>上述图示中的数据都需要手工去维护吗？</summary>
+  <div>
+不需要。在Dubbo服务实现类的方法上使用注解@ShenyuDubboClient标记，则该接口方法元数据自动上传到ShenYu Admin中，并根据配置自动创建选择器，最终通过同步机制会同步到ShenYu Gateway模块。只有图1的Dubbo插件配置需要手工维护。
+  </div>
+</details>
+
+
+## 网关实战
+ShenYu网关提供的功能非常多，这里我们只关注和盘古开发相关的功能。
+
+### Http请求代理
+代理前端HTTP请求，通过Dubbo泛化调用后端Dubbo服务。此内容已在[《如何开发网关->基于ShenYu的专业模式》](/docs/quick-start/how-to-make-gateway-app/shenyu-based)章节讲解过，这里不再赘述。
+
+### 鉴权
+Coming soon...
+
+## 下一步
+继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
