--- a/pangu-website/docs/quick-start/gateway/高级模式.md
+++ b/pangu-website/docs/quick-start/gateway/高级模式.md
@@ -207,7 +207,7 @@ shenyu.client.server-lists | ShenYu Admin地址或配置中心地址。集群时
 shenyu.client.props.contextPath | 本服务在网关中的路由前缀,可自定义按需配置
 
 ### 自动上报服务接口元数据
-在Dubbo服务实现类的方法上使用注解`@ShenyuDubboClient`标记，表示该接口方法注册到网关。如下代码所示。
+在Dubbo服务实现类的方法上使用注解`@ShenyuDubboClient`标记，表示该接口方法元数据自动上传到ShenYu Admin。如下代码所示。
 
 ```jsx {5,12}
 @Service(version = "1.0.0", group = "pangu-examples-dubbo-gateway-service")
