创建项目官网pang-website，编写网关相关开发指南

--- a/pangu-website/docs/advanced-guide/注册中心.md
+++ b/pangu-website/docs/advanced-guide/注册中心.md
@@ -1,6 +1,6 @@
 ---
 title: 注册中心
-tags: [nacos, 注册中心, Dubbo, 服务注册, 服务发现]
+tags: [nacos, 注册中心, Dubbo, 服务注册, 服务发现,盘古简介,盘古架构]
 sidebar_position: 2
 slug: /advanced-guide/nacos-regist-center
 ---
