--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -1,6 +1,6 @@
 ---
 title: 配置中心
-tags: [nacos, 配置中心]
+tags: [nacos, 配置中心,盘古简介,盘古架构]
 sidebar_position: 1
 slug: /advanced-guide/nacos-config-center
 ---
