--- a/pangu-website/docs/advanced-guide/分布式多级缓存.md
+++ b/pangu-website/docs/advanced-guide/分布式多级缓存.md
@@ -15,7 +15,7 @@ import TabItem from '@theme/TabItem';
 ## 安装相关盘古框架模块
 
 <Tabs>
-<TabItem value="parent" label="继承盘古Parent">
+<TabItem value="parent" label="盘古Parent">
 
 ```jsx
 <parent>
@@ -26,7 +26,7 @@ import TabItem from '@theme/TabItem';
 </parent>
 ```
 </TabItem>
-<TabItem value="dependency1" label="盘古模块①">
+<TabItem value="dependency1" label="基础模块">
 
 ```jsx
 <dependency>
@@ -35,7 +35,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="盘古模块②">
+<TabItem value="dependency2" label="缓存模块">
 
 ```jsx
 <dependency>
@@ -87,7 +87,7 @@ logging.level.com.gitee.pulanos.pangu=INFO
 layering-cache.stats | 缓存监控统计开关，缺省true
 layering-cache.redis.serializer | Redis序列化方式
 
-## 基于注解使用
+## 基于注解声明
 直接在需要缓存的方法上加上`@Cacheable`、`@CacheEvict`、`@CachePut`注解。（`@FirstCache`、`@SecondaryCache`为注解配置项，不能单独使用）
 
 ### @FirstCache
@@ -183,7 +183,7 @@ public void delAllUsers() {
 }
 ```
 
-## 基于API使用
+## 基于API编程
 可以直接使用Laying Cahce提供的API进行硬编码操作两级缓存，但不建议使用。这里就不做详细讲解了，可以在参考范例的`ApiBasedDemoService`类中找到相关的代码。
 
 ## 启动入口
