--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -23,7 +23,7 @@ import TabItem from '@theme/TabItem';
 ## 安装相关盘古框架模块
 
 <Tabs>
-<TabItem value="parent" label="继承盘古Parent">
+<TabItem value="parent" label="盘古Parent">
 
 ```jsx
 <parent>
@@ -34,7 +34,7 @@ import TabItem from '@theme/TabItem';
 </parent>
 ```
 </TabItem>
-<TabItem value="dependency1" label="盘古模块①">
+<TabItem value="dependency1" label="基础模块">
 
 ```jsx
 <dependency>
@@ -43,7 +43,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="盘古模块②">
+<TabItem value="dependency2" label="JDBC模块">
 
 ```jsx
 <dependency>
@@ -87,7 +87,7 @@ logging.level.com.gitee.pulanos.pangu=INFO
 </Tabs>
 
 ## 生成持久化所需的模版代码
-基于实践经验，我们建议使用盘古代码生成器，而不是使用Mybatis Plus官方生成器。关于生成代码相关内容，请参阅[《代码生成器插件》](#)章节，这里不再赘述。（针对每一个数据表会生成一个`*Mapper.java`文件和一个`*Entity.java`文件）
+基于实践经验，我们建议使用盘古代码生成器，而不是使用Mybatis Plus官方生成器。关于生成代码相关内容，请参阅[《代码生成器插件》](/docs/code-generator)章节，这里不再赘述。（针对每一个数据表会生成一个`*Mapper.java`文件和一个`*Entity.java`文件）
 
 ## 基本数据持久化操作
  
