--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -61,7 +61,7 @@ Nacos的客户端SDK会在本地生成配置的快照。当客户端无法连接
 ### 安装相关盘古框架模块
 
 <Tabs>
-<TabItem value="parent" label="继承盘古Parent">
+<TabItem value="parent" label="盘古Parent">
 
 ```jsx
 <parent>
@@ -72,7 +72,7 @@ Nacos的客户端SDK会在本地生成配置的快照。当客户端无法连接
 </parent>
 ```
 </TabItem>
-<TabItem value="dependency1" label="盘古模块①">
+<TabItem value="dependency1" label="基础模块">
 
 ```jsx
 <dependency>
