--- a/pangu-website/docs/quick-start/如何开发单体应用.md
+++ b/pangu-website/docs/quick-start/如何开发单体应用.md
@@ -8,14 +8,12 @@ slug: /quick-start/how-to-make-monomer-architecture-app
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-:::info
 本文介绍如何基于盘古开发框架开发一个单体分层架构的应用。文中所述仅为搭建一个单体应用的基本框架，增加配置中心、数据持久化、缓存等能力请参考使用指南的相关章节。
-:::
 
 ## 安装相关盘古框架模块
 
 <Tabs>
-<TabItem value="parent" label="继承盘古Parent">
+<TabItem value="parent" label="盘古Parent">
 
 ```jsx
 <parent>
@@ -26,7 +24,7 @@ import TabItem from '@theme/TabItem';
 </parent>
 ```
 </TabItem>
-<TabItem value="dependency1" label="盘古模块①">
+<TabItem value="dependency1" label="基础模块">
 
 ```jsx
 <dependency>
@@ -35,7 +33,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="盘古模块②">
+<TabItem value="dependency2" label="Web模块">
 
 ```jsx
 <dependency>
