--- a/pangu-website/docs/quick-start/如何开发微服务应用.md
+++ b/pangu-website/docs/quick-start/如何开发微服务应用.md
@@ -8,15 +8,13 @@ slug: /quick-start/how-to-make-microservice-architecture-app
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-:::tip
 本文介绍如何基于盘古开发框架开发一个微服务应用。文中所述仅为搭建一个微服务应用的基本框架（服务注册&服务发现），如要增加配置中心、网关代理、数据持久化、缓存等能力请参考使用指南的相关章节。
-:::
 
 ## 服务提供者
 ### 安装相关盘古框架模块
 
 <Tabs>
-<TabItem value="parent" label="继承盘古Parent">
+<TabItem value="parent" label="盘古Parent">
 
 ```jsx
 <parent>
@@ -27,7 +25,7 @@ import TabItem from '@theme/TabItem';
 </parent>
 ```
 </TabItem>
-<TabItem value="dependency1" label="盘古模块①">
+<TabItem value="dependency1" label="基础模块">
 
 ```jsx
 <dependency>
@@ -36,7 +34,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="盘古模块②">
+<TabItem value="dependency2" label="Dubbo模块">
 
 ```jsx
 <dependency>
