--- a/pangu-website/docs/quick-start/网关开发模式简介.md
+++ b/pangu-website/docs/quick-start/网关开发模式简介.md
@@ -1,13 +1,19 @@
 ---
 title: 网关开发模式简介
 tags: [快速开始,网关,盘古简介,盘古架构]
-sidebar_position: 1
+sidebar_position: 30
 slug: /quick-start/how-to-make-gateway-app
 ---
 
+# 网关开发模式简介
+
 在上文[《如何开发微服务应用》](/docs/quick-start/how-to-make-microservice-architecture-app)中，我们已经介绍了如何开发一个微服务应用以及微服务模块之间的互相调用。在盘古框架体系下，进行网关开发（将微服务接口发布为WebAPI）有两种方式。
-- 第一种是依赖SpringMVC并引入服务接口包显式调用服务接口的方式发布。严格意义上说，这并非标准的网关，只是一种简单快速直接的将微服务通过Controller包装为WebAPI的方式。
-- 第二种是基于Apache ShenYu框架，不需要引入服务接口包通过Dubbo泛化调用服务接口的方式发布。同时网关支持鉴权、动态限流、熔断、防火墙；支持A/B Test，灰度发布等。
+
+### 基于SpringMVC的简单网关开发  
+依赖Servlet容器，需要引入服务接口包。基于SpringMVC通过Controller调用后端Dubbo服务。严格意义上说，这并非标准的网关，只是一种简单快速直接的将微服务通过Controller包装为WebAPI的方式。诸如鉴权一类的需求都需要自己用Web拦截器来实现。
+
+### 基于ShenYu的专业网关开发
+依赖Netty不需要Servlet容器，不需要引入服务接口包。基于Webflex非阻塞模型通过Dubbo泛化调用后端服务。同时网关支持鉴权、动态限流、熔断、防火墙；支持A/B Test，灰度发布等。
 
 ## 开发模式对比
 
