--- a/pangu-website/docs/quick-start/网关高级模式.md
+++ b/pangu-website/docs/quick-start/网关高级模式.md
@@ -1,23 +1,23 @@
 ---
-title: 基于ShenYu的专业模式
+title: 如何开发网关（ShenYu）
 tags: [快速开始,网关]
-sidebar_position: 90
+sidebar_position: 50
 slug: /quick-start/how-to-make-gateway-app/shenyu-based
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# 基于ShenYu的专业模式网关开发
+# 基于ShenYu的专业网关开发
 
 网关开发模式选型参考建议请看上文[《网关开发模式简介》](/docs/quick-start/how-to-make-gateway-app)。
 
-## 网关模块开发（服务消费端）
+## 网关模块开发
 
 ### 安装相关盘古框架模块
 
 <Tabs>
-<TabItem value="parent" label="继承盘古Parent">
+<TabItem value="parent" label="盘古Parent">
 
 ```jsx
 <parent>
@@ -28,7 +28,7 @@ import TabItem from '@theme/TabItem';
 </parent>
 ```
 </TabItem>
-<TabItem value="dependency1" label="盘古模块①">
+<TabItem value="dependency1" label="基础模块">
 
 ```jsx
 <dependency>
@@ -37,7 +37,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="盘古模块②">
+<TabItem value="dependency2" label="Dubbo模块">
 
 ```jsx
 <dependency>
@@ -46,7 +46,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency3" label="盘古模块③">
+<TabItem value="dependency3" label="网关模块">
 
 ```jsx
 <dependency>
