--- a/pangu-website/docs/代码生成器插件.md
+++ b/pangu-website/docs/代码生成器插件.md
@@ -1,8 +1,8 @@
 ---
 title: 代码生成器插件
-tags: [代码生成器插件,数据持久化, MyBatis, MyBatis-Plus]
-sidebar_position: 30
-slug: /advanced-guide/code-generator
+tags: [代码生成器插件,数据持久化, MyBatis, MyBatis-Plus,盘古简介,盘古架构]
+sidebar_position: 14
+slug: /code-generator
 ---
 
 # 代码生成器插件
@@ -50,7 +50,7 @@ mapperPackageName | Mapper类所在包
 
 :::tip 提示
 - 上表中输出路径参数可以是基于${project.basedir}的相对路径，也可以是绝对路径。
-- 微服务开发中实体类文件一般是生成到服务接口包里，与服务消费方共享。（可以在服务接口模块安装此插件，或者将生成路径直接指向对应接口模块的绝对路径）
+- 微服务开发中实体类文件一般是生成到服务接口包里，与服务消费方共享。（可以在接口包模块安装此插件，或者在服务实现模块将实体类生成路径直接指向接口包）
 :::
 
 ## 运行Maven插件
@@ -94,6 +94,7 @@ xc@xc-mac pangu-examples-crud % mvn pangu:generate
 
 ## 相关参考范例
 - [pangu-examples-crud](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-crud)：数据持久化参考范例（含代码生成器演示）
+- [pangu-examples-dubbo-api](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-api)：服务接口包（含代码生成器演示）
 
 ## 下一步
 继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
