--- a/pangu-website/docs/安装.md
+++ b/pangu-website/docs/安装.md
@@ -9,12 +9,14 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 # 盘古框架安装
-:::tip
-本文将介绍如何通过包依赖管理工具安装盘古框架。
-:::
 
-## 模块pangu-parent
+本文将介绍如何通过包依赖管理工具安装盘古框架。
+
+> 请将版本号`latest.version.xxx`替换为当前最新版本号为：`5.0.7`。
+
+## 依赖管理模块
 盘古资源依赖声明管理模块。所有盘古引用都应该依赖这个模块。
+
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
 
@@ -37,29 +39,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-parent:latest.version.xxx'
 </TabItem>
 </Tabs>
 
-## 模块pangu-common
-盘古公共基础类库。不需要显式引入，已经在`pangu-spring-boot-starter`中依赖此模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-common</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-common:latest.version.xxx'
-```
-</TabItem>
-</Tabs>
-
-## 模块pangu-spring-boot-starter	
+## 基础模块	
 盘古启动、中心化配置、动态日志等基础能力自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
@@ -81,7 +61,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-spring-boot-starter:latest.version
 </TabItem>
 </Tabs>
 
-## 模块pangu-dubbo-spring-boot-starter	
+## Dubbo模块	
 盘古微服务开发自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
@@ -103,7 +83,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-dubbo-spring-boot-starter:latest.v
 </TabItem>
 </Tabs>
 
-## 模块pangu-jdbc-spring-boot-starter
+## JDBC模块
 盘古数据库持久化操作自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
@@ -125,7 +105,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-jdbc-spring-boot-starter:latest.ve
 </TabItem>
 </Tabs>
 
-## 模块pangu-cache-spring-boot-starter
+## 缓存模块
 盘古缓存开发自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
@@ -147,7 +127,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-cache-spring-boot-starter:latest.v
 </TabItem>
 </Tabs>
 
-## 模块pangu-gateway-spring-boot-starter
+## 网关模块
 盘古网关开发自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
@@ -169,7 +149,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-gateway-spring-boot-starter:latest
 </TabItem>
 </Tabs>
 
-## 模块pangu-web-spring-boot-starter
+## Web模块
 盘古Web应用自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
@@ -191,7 +171,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-web-spring-boot-starter:latest.ver
 </TabItem>
 </Tabs>
 
-## 模块pangu-generator-maven-plugin
+## 代码生成插件
 盘古代码生成器Maven插件。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
@@ -212,10 +192,6 @@ implementation 'com.gitee.pulanos.pangu:pangu-generator-maven-plugin:latest.vers
 ```
 </TabItem>
 </Tabs>
-
-:::danger
-请将上述版本号`latest.version.xxx`替换为当前发布的最新版本，如：`5.0.7`或更新版本。
-:::
 
 ## 下一步
 继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
