--- a/pangu-website/docs/advanced-guide/消息队列.md
+++ b/pangu-website/docs/advanced-guide/消息队列.md
@@ -1,7 +1,13 @@
 ---
-title: 消息队列
+title: 消息队列 [TODO]
 tags: [消息队列]
 sidebar_position: 20
 slug: /advanced-guide/mq
 ---
 
+# 消息队列
+
+Coming soon...
+
+## 下一步
+继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
