--- a/pangu-website/docs/quick-start/网关简单模式.md
+++ b/pangu-website/docs/quick-start/网关简单模式.md
@@ -1,7 +1,7 @@
 ---
-title: 基于SpringMVC的简单模式
+title: 如何开发网关（SpringMVC）
 tags: [快速开始,网关]
-sidebar_position: 5
+sidebar_position: 40
 slug: /quick-start/how-to-make-gateway-app/springmvc-based
 ---
 
@@ -15,7 +15,7 @@ import TabItem from '@theme/TabItem';
 ## 安装相关盘古框架模块
 
 <Tabs>
-<TabItem value="parent" label="继承盘古Parent">
+<TabItem value="parent" label="盘古Parent">
 
 ```jsx
 <parent>
@@ -26,7 +26,7 @@ import TabItem from '@theme/TabItem';
 </parent>
 ```
 </TabItem>
-<TabItem value="dependency1" label="盘古模块①">
+<TabItem value="dependency1" label="基础模块">
 
 ```jsx
 <dependency>
@@ -35,7 +35,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="盘古模块②">
+<TabItem value="dependency2" label="Dubbo模块">
 
 ```jsx
 <dependency>
@@ -44,7 +44,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency3" label="盘古模块③">
+<TabItem value="dependency3" label="Web模块">
 
 ```jsx
 <dependency>
