--- a/pangu-website/docs/社区.md
+++ b/pangu-website/docs/社区.md
@@ -5,7 +5,7 @@ sidebar_position: 90
 slug: /community
 ---
 
-# 普蓝开源开发者社区
+# 开发者社区
 
 :::tip
 在使用盘古开发框架的过程中，如果您发现任何问题，有新的想法、建议都可以通过如下方式参与到普蓝开源社区建设中或寻求更多帮助。
@@ -14,13 +14,15 @@ slug: /community
 ## 开发者交流平台
 **访问Gitee Issues：**[点我进入](https://gitee.com/pulanos/pangu-framework/issues?state=all) 
 
+## 作者联系方式
+
+**写信给我：** daxiong005@qq.com
+
 ## 开发者社区微信群
 
 <img width="295"
   src={require('/resources/wxq.jpeg').default}
   alt="普蓝开源社区微信群" />
 
-
-## 作者联系方式
-
-**写信给我：** daxiong005@qq.com
+## 下一步
+继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
