更新文档，盘古简介。

--- a/pangu-website/docs/advanced-guide/分布式锁.md
+++ b/pangu-website/docs/advanced-guide/分布式锁.md
@@ -2,7 +2,7 @@
 title: 分布式锁
 tags: [分布式锁,数据持久化]
 sidebar_position: 15
-slug: /advanced-guide/guide4
+slug: /advanced-guide/distributed-lock
 ---
 
 import Tabs from '@theme/Tabs';
