更新文档，盘古简介。

--- a/pangu-website/docs/社区.md
+++ b/pangu-website/docs/社区.md
@@ -16,13 +16,7 @@ slug: /community
 
 ## 作者联系方式
 
-**写信给我：** daxiong005@qq.com
-
-## 开发者社区微信群
-
-<img width="295"
-  src={require('/resources/wxq.jpeg').default}
-  alt="普蓝开源社区微信群" />
+**写信给我：** 18616786188@qq.com
 
 ## 下一步
 继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
