更新开发指南

--- a/pangu-website/docs/advanced-guide/分布式多级缓存.md
+++ b/pangu-website/docs/advanced-guide/分布式多级缓存.md
@@ -12,7 +12,7 @@ import TabItem from '@theme/TabItem';
 
 盘古开发框架基于[Laying Cahce](https://github.com/xiaolyuh/layering-cache)，提供支持分布式环境的多级缓存功能。使用Caffeine作为一级本地缓存，Redis作为二级集中式缓存。支持缓存信息监控统计、支持缓存过期时间在注解上直接配置、支持缓存的自动刷新、缓存Key支持SpEL表达式、支持无感禁用一级缓存或二级缓存。通过缓存空值来解决缓存穿透问题、通过异步加载缓存的方式来解决缓存击穿和雪崩问题。
 
-## 安装相关盘古框架模块
+## 安装相关盘古模块
 
 <Tabs>
 <TabItem value="parent" label="盘古Parent">
