--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -30,7 +30,7 @@ Nacos 是构建以“服务”为中心的现代应用架构 (例如微服务范
 <details>
   <summary><b>快速QA：</b>单体分层架构的开发模式也可以使用配置中心进行配置吗？</summary>
   <div>
-  配置中心是分布式微服务架构开发环境下强烈建议的必选标配组件。但如果你是基于单体分层架构开发，配置中心也是一样可以使用的。对于这些基础能力，无论是微服务还是单体，盘古框架都做了完美适配，只需要依赖`pangu-spring-boot-starter`就看实现开箱即用。
+  配置中心是分布式微服务架构开发环境下强烈建议的必选标配组件。但如果你是基于单体分层架构开发，配置中心也是一样可以使用的。对于这些基础能力，无论是微服务还是单体，盘古框架都做了完美适配，只需要依赖`pangu-spring-boot-starter`就可以实现开箱即用。
   </div>
 </details>
 
@@ -58,7 +58,7 @@ Nacos的客户端SDK会在本地生成配置的快照。当客户端无法连接
 ## 配置中心实战
 下面介绍一个使用配置中心的例子。其它基于本地配置的范例都可以参考这个例子改为基于配置中心的动态配置。
 
-### 安装相关盘古框架模块
+### 安装相关盘古模块
 
 <Tabs>
 <TabItem value="parent" label="盘古Parent">
