--- a/pangu-website/docs/代码生成器插件.md
+++ b/pangu-website/docs/代码生成器插件.md
@@ -5,7 +5,7 @@ sidebar_position: 14
 slug: /code-generator
 ---
 
-# 代码生成器插件
+# 盘古代码生成器插件
 盘古代码生成器是基于Maven的一个自定义插件。可以方便快捷的以插件的方式安装到任何一个Maven模块中去。目前支持生成如下代码。
 - MyBatis Plus Mapper.java 映射接口文件
 - MyBatis Plus Entity.java 实体文件
