--- a/pangu-website/docs/advanced-guide/分布式锁.md
+++ b/pangu-website/docs/advanced-guide/分布式锁.md
@@ -12,7 +12,7 @@ import TabItem from '@theme/TabItem';
 
 盘古开发框架基于[lock4j](https://gitee.com/baomidou/lock4j)，提供分布式锁。支持注解声明式和API编程式对业务代码在分布式环境下加并发锁。
 
-## 安装相关盘古框架模块
+## 安装相关盘古模块
 
 <Tabs>
 <TabItem value="parent" label="盘古Parent">
