--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -20,7 +20,7 @@ import TabItem from '@theme/TabItem';
   </div>
 </details>
 
-## 安装相关盘古框架模块
+## 安装相关盘古模块
 
 <Tabs>
 <TabItem value="parent" label="盘古Parent">
