--- a/pangu-website/docs/quick-start/如何开发单体应用.md
+++ b/pangu-website/docs/quick-start/如何开发单体应用.md
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 本文介绍如何基于盘古开发框架开发一个单体分层架构的应用。文中所述仅为搭建一个单体应用的基本框架，增加配置中心、数据持久化、缓存等能力请参考使用指南的相关章节。
 
-## 安装相关盘古框架模块
+## 安装相关盘古模块
 
 <Tabs>
 <TabItem value="parent" label="盘古Parent">
