--- a/pangu-website/docs/quick-start/如何开发微服务应用.md
+++ b/pangu-website/docs/quick-start/如何开发微服务应用.md
@@ -11,7 +11,7 @@ import TabItem from '@theme/TabItem';
 本文介绍如何基于盘古开发框架开发一个微服务应用。文中所述仅为搭建一个微服务应用的基本框架（服务注册&服务发现），如要增加配置中心、网关代理、数据持久化、缓存等能力请参考使用指南的相关章节。
 
 ## 服务提供者
-### 安装相关盘古框架模块
+### 安装相关盘古模块
 
 <Tabs>
 <TabItem value="parent" label="盘古Parent">
