--- a/pangu-website/docs/quick-start/网关简单模式.md
+++ b/pangu-website/docs/quick-start/网关简单模式.md
@@ -12,7 +12,7 @@ import TabItem from '@theme/TabItem';
 
 网关开发模式选型参考建议请看上文[《网关开发模式简介》](/docs/quick-start/how-to-make-gateway-app)。
 
-## 安装相关盘古框架模块
+## 安装相关盘古模块
 
 <Tabs>
 <TabItem value="parent" label="盘古Parent">
