--- a/pangu-website/docs/quick-start/网关高级模式.md
+++ b/pangu-website/docs/quick-start/网关高级模式.md
@@ -14,7 +14,7 @@ import TabItem from '@theme/TabItem';
 
 ## 网关模块开发
 
-### 安装相关盘古框架模块
+### 安装相关盘古模块
 
 <Tabs>
 <TabItem value="parent" label="盘古Parent">
