--- a/pangu-website/docs/社区.md
+++ b/pangu-website/docs/社区.md
@@ -1,18 +1,22 @@
 ---
 title: 开发者社区
-tags: []
+tags: [开发者社区]
 sidebar_position: 90
 slug: /community
 ---
 
 # 开发者社区
 
-:::tip
-在使用盘古开发框架的过程中，如果您发现任何问题，有新的想法、建议都可以通过如下方式参与到普蓝开源社区建设中或寻求更多帮助。
-:::
+在使用盘古开发框架的过程中，如果您发现任何问题，有新的想法、建议都可以通过如下方式参与到开发者社区建设中或寻求更多帮助。
 
-## 开发者交流平台
+## Gitee Issues
 **访问Gitee Issues：**[点我进入](https://gitee.com/pulanos/pangu-framework/issues?state=all) 
+
+## 微信交流群
+
+<img width="260"
+  src={require('/resources/wxq.jpeg').default}
+  alt="普蓝开源社区微信群" />
 
 ## 作者联系方式
 
