更新开发指南文档

--- a/pangu-website/docs/quick-start/盘古开发架构简介.md
+++ b/pangu-website/docs/quick-start/盘古开发架构简介.md
@@ -10,9 +10,9 @@ slug: /quick-start/how-to-make-architecture
 :::
 
 ## 写在前面
-:::info
-软件架构的本质是一种在特定资源背景下折中平衡后追求业务增长的一门艺术。决定技术开发架构选型的因素很多。这里，我们对不通开发架构模式进行客观比较，希望对大家在技术架构选型时能有所帮助。
-:::
+
+软件架构的本质是一种在特定资源背景下折中平衡后追求业务增长的一门艺术。决定技术开发架构选型的因素很多。这里，我们对不同开发架构模式进行客观比较，希望对大家在技术架构选型时能有所帮助。
+
 
 ## 单体分层架构 VS 微服务分布式架构
 |<div style={{width:'80px'}}>-</div>| 单体分层架构 | 微服务分布式架构  
