--- a/pangu-website/docs/quick-start/盘古开发架构简介.md
+++ b/pangu-website/docs/quick-start/盘古开发架构简介.md
@@ -6,7 +6,7 @@ slug: /quick-start/how-to-make-architecture
 ---
 
 :::tip
-"鞋子合不合脚只有自己穿着才知道"。因此，盘古框架不会绑定用户到一个固定的开发范式和架构上，而是支持随意组合、自动装配、灵活插拔。 既能构建大并发高可用的互联网分布式架构也能搭建小而美的传统单体分层架构。
+盘古框架不会绑定用户到一个固定的开发范式和架构上，而是支持随意组合、自动装配、灵活插拔。 既能构建大并发高可用的分布式微服务架构也能搭建小巧的垂直单体分层架构。
 :::
 
 ## 写在前面
