更新文档，盘古简介。

--- a/pangu-website/docs/quick-start/盘古开发架构简介.md
+++ b/pangu-website/docs/quick-start/盘古开发架构简介.md
@@ -28,7 +28,7 @@ slug: /quick-start/how-to-make-architecture
 
 ## 盘古开发架构选型建议
 :::danger
-如下是从不同维度简单粗暴的以定量或定性的角度给出了一些选型建议，结论是孤立的脱离实际的，仅供参考。采用什么样的架构开发模式不能一概而论，需要大家综合当下实际情况酌情选择。正所谓，"鞋子合不合脚只有自己穿着才知道"。
+如下是从不同维度简单粗暴的以定量或定性的角度给出了一些选型建议，结论是孤立的脱离实际的，仅供参考。采用什么样的架构开发模式不能一概而论，需要大家综合当下实际情况酌情选择。
 :::
 
 | - | 单体分层架构 | 微服务分布式架构  
