集成Seata事务框架，提供分布式事务解决方案。提供AT模式和TCC模式的范例和开发文档。

--- a/pangu-website/docs/advanced-guide/分布式多级缓存.md
+++ b/pangu-website/docs/advanced-guide/分布式多级缓存.md
@@ -220,7 +220,7 @@ public class LayeringCachePanguApplication {
   </div>
 </details>
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-cache-layering](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-empty-web)：两级缓存（本地缓存+Redis集中缓存）范例
 - [pangu-examples-cache-single](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-cache-single)：Spring Cache一级缓存API（RedisTemplate）范例
 
