--- a/pangu-website/docs/advanced-guide/分布式锁.md
+++ b/pangu-website/docs/advanced-guide/分布式锁.md
@@ -150,7 +150,7 @@ public class LockPanguApplication {
 }
 ```
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-lock-redis-based](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-lock-redis-based)：分布式锁范例
 
 ## 下一步
