--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -324,7 +324,7 @@ public class CrudApplication {
 }
 ```
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-crud](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-crud)：数据持久化参考范例
 
 ## 下一步
