--- a/pangu-website/docs/advanced-guide/消息队列.md
+++ b/pangu-website/docs/advanced-guide/消息队列.md
@@ -259,7 +259,7 @@ public void sendMsg() {
 #### 消费者
 ![消费者](/resources/doc/16-pangu-framework-queue.png)
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-mq-rabbitmq-sender](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-mq-rabbitmq-sender)：消息队列范例（生产者）
 - [pangu-examples-mq-rabbitmq-receiver](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-mq-rabbitmq-receiver)：消息队列范例（消费者）
 
