--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -177,7 +177,7 @@ logging.level.root=INFO
 logging.level.com.gitee.pulanos.pangu=INFO
 ```
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-config-remote-nacos](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-config-remote-nacos)：配置中心参考范例
 - [pangu-examples-log-dynamic](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-log-dynamic)：基于配置中心的日志级别热切换参考范例
 
