--- a/pangu-website/docs/quick-start/如何开发单体应用.md
+++ b/pangu-website/docs/quick-start/如何开发单体应用.md
@@ -77,7 +77,7 @@ public class EmptyWebPanguApplication {
 }
 ```
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-empty-web](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-empty-web)：单体分层Web应用范例
 
 ## 下一步
