--- a/pangu-website/docs/quick-start/如何开发微服务应用.md
+++ b/pangu-website/docs/quick-start/如何开发微服务应用.md
@@ -149,7 +149,7 @@ public class UserAdminManager {
 }
 ```
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-dubbo-api](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-api)：服务接口包
 - [pangu-examples-dubbo-service](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-service)：服务提供者
 - [pangu-examples-dubbo-consumer](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-consumer)：服务消费者
