--- a/pangu-website/docs/quick-start/网关简单模式.md
+++ b/pangu-website/docs/quick-start/网关简单模式.md
@@ -139,7 +139,7 @@ public class DubboProviderApplication {
 ## 完整请求URL及参数说明
 至此，就可以通过http的方式来请求我们的的dubbo服务了。此种开发模式完全基于SpringMVC，其请求地址和参数说明等信息本教程不再展开叙述。如有需要，请自行查阅SpringMVC请求和响应的相关教程即可。
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-dubbo-api](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-api)：服务接口包
 - [pangu-examples-dubbo-service](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-service)：服务提供者
 - [pangu-examples-dubbo-gateway-service](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-gateway-service)：基于SpringMVC的网关模块（服务消费者）
