--- a/pangu-website/docs/quick-start/网关高级模式.md
+++ b/pangu-website/docs/quick-start/网关高级模式.md
@@ -255,7 +255,7 @@ curl --location --request POST 'http://127.0.0.1:9090/dubbo/findUserEntity' \
 }
 ```
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-dubbo-api](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-api)：服务接口包
 - [pangu-examples-dubbo-gateway-service](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-gateway-service)：服务提供者（支持网关）
 - [pangu-examples-webapi-gateway-based](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-webapi-gateway-based)：服务消费者（基于ShenYu的网关模块）
