--- a/pangu-website/docs/代码生成器插件.md
+++ b/pangu-website/docs/代码生成器插件.md
@@ -92,7 +92,7 @@ xc@xc-mac pangu-examples-crud % mvn pangu:generate
 ```
 
 
-## 相关参考范例
+## 本文相关范例源码
 - [pangu-examples-crud](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-crud)：数据持久化参考范例（含代码生成器演示）
 - [pangu-examples-dubbo-api](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-api)：服务接口包（含代码生成器演示）
 
