集成Seata事务框架，提供分布式事务解决方案。提供AT模式和TCC模式的范例和开发文档。

--- a/pangu-website/docs/advanced-guide/分布式事务.md
+++ b/pangu-website/docs/advanced-guide/分布式事务.md
@@ -10,53 +10,67 @@ import TabItem from '@theme/TabItem';
 
 # 分布式事务
 
-盘古开发框架集成了事务中间件 [Seata](https://seata.io/en-us/index.html) 来提供分布式事务的落地方案。
+盘古开发框架集成了事务中间件 [Seata](https://seata.io/en-us/index.html) 来提供分布式事务管理功能。
 
 
 ## 事务概念
 数据库事务需要满足 ACID（原子性、一致性、隔离性、持久性）四个特性。
-- 原子性（Atomicity）指事务作为整体来执行，要么全部执行，要么全不执行；
-- 一致性（Consistency）指事务应确保数据从一个一致的状态转变为另一个一致的状态；
-- 隔离性（Isolation）指多个事务并发执行时，一个事务的执行不应影响其他事务的执行；
-- 持久性（Durability）指已提交的事务修改数据会被持久保存。
+- **原子性**（Atomicity）指事务作为一个整体来执行，要么全都执行，要么全不执行。
+- **一致性**（Consistency）指事务应确保数据从一个一致的状态转变为另一个一致的状态。
+- **隔离性**（Isolation）指多个事务并发执行时，一个事务的执行不应影响其他事务的执行。
+- **持久性**（Durability）指已提交事务修改的数据会被持久保存。
 
-在单一数据节点中，事务仅限于对单一数据库资源的访问控制，称之为本地事务。所有成熟的关系型数据库都提供了对本地事务的原生支持。在基于Spring的开发中，我们一般使用基于`@Transactional`注解的声明式事务来完成。
+在单一数据节点中，事务仅限于对单一数据库资源的访问控制，称之为本地事务。在基于 Spring 的开发中，我们一般使用 `@Transactional` 注解的声明式事务来管理。
 
 ## 分布式事务概念
-分布式事务的产生，是由于数据库的拆分或分布式架构（微服务）带来的。在常规情况下，我们在一个进程中操作一个数据库，这属于本地事务。如果在一个进程中操作多个数据库，或者在多个进程中操作一个或多个数据库，就产生了分布式事务。可见，分布式事务并非微服务架构的产物，在单体应用中由于数据库的拆分也一样面临分布式事务的问题。如下为当前针对分布式事务的工程实践和处理方式。
-- 基于业务逻辑和应用场景最小化分布式事务边界。言外之意就是说不要没事找事故意挖坑，人为的去制造没必要的分布式事务场景。
-- 基于XA的强一致事务。基于XA协议实现的分布式事务对业务侵入很小。它最大的优势就是对使用方透明，用户可以像使用本地事务一样使用基于XA协议的分布式事务且能够严格保障事务 ACID 特性。 但对于长事务来说，整个事务进行期间对数据的独占，将导致并发性能衰退明显。因此，在高并发的性能至上场景中，基于 XA 协议的分布式事务并不是最佳选择。
-- 追求最终一致性的柔性事务。柔性事务的理念则是通过业务逻辑将互斥锁操作从数据资源层面上移至业务层面。通过放宽对强一致性要求，来换取系统吞吐量的提升。它需要开发者对应用进行改造，接入成本非常高，需要开发者自行实现资源锁定和反向补偿。（Seata 框架的 AT 模式可以无侵入零成本的自动实现资源锁定和反向数据补偿）
+由于数据库的拆分或分布式架构（微服务）不可避免的带来了分布式事务的问题。如下为当前针对分布式事务的工程实践和处理方式。
+- **基于业务逻辑和应用场景最小化分布式事务边界**  
+言外之意就是说不要没事找事故意挖坑，人为的去制造没必要的分布式事务场景。
+- **基于XA的强一致性事务**  
+XA模式是传统的分布式强一致性的解决方案，性能较低，在实际业务中使用较少，本文不做更多讨论。
+- **追求最终一致性的柔性事务**  
+柔性事务通过放宽对强一致性要求，而是通过反向补偿来达到最终一致性，同时换取系统吞吐量的提升。目前，Seata框架提供了多种事务管理模式来支持柔性事务的落地实现。（详见后续章节）
+
+<details>
+  <summary><b>快速QA：</b>在单体架构的应用中也会有分布式事务吗？</summary>
+  <div>
+在常规情况下，我们在一个进程中操作一个数据库，这属于本地事务。但是，如果在一个进程中操作多个数据库，或者在多个进程中操作一个或多个数据库，就产生了分布式事务。可见，分布式事务并非微服务架构的产物，在单体应用中由于数据库的拆分也一样面临分布式事务的问题。
+  </div>
+</details>
 
 ## Seata 分布式事务框架
-[Seata](https://seata.io/en-us/index.html) 是一款开源的分布式事务解决方案，致力于提供高性能和简单易用的分布式事务服务，它为用户提供了 AT、TCC、SAGA 和 XA 事务模式，为用户打造一站式的分布式解决方案。
-### Seta 专业术语
-- TC (Transaction Coordinator) - 事务协调者
-维护全局和分支事务的状态，驱动全局事务提交或回滚。也就是需要启动的 `seata-server` 。
+[Seata](https://seata.io/en-us/index.html) 是一款开源的分布式事务解决方案，致力于提供高性能和简单易用的分布式事务服务，为用户打造一站式的分布式解决方案。
 
-- TM (Transaction Manager) - 事务管理器
-定义全局事务的范围：开始全局事务、提交或回滚全局事务。通过全局事务发起方的 `@GlobalTransactional` 注解实现。
+### Seata 专业术语
+- **事务协调者 TC** ( Transaction Coordinator )  
+维护全局和分支事务的状态，驱动全局事务提交或回滚。
 
-- RM (Resource Manager) - 资源管理器
-管理分支事务处理的资源，与TC交谈以注册分支事务和报告分支事务的状态，并驱动分支事务提交或回滚。通过动态代理后的 `DataSource` 实现。
+- **事务管理器 TM** ( Transaction Manager )  
+定义全局事务的范围，开始全局事务、提交或回滚全局事务。
+
+- **资源管理器RM** ( Resource Manager )  
+管理分支事务处理的资源，与TC交谈以注册分支事务和报告分支事务的状态并驱动分支事务提交或回滚。
+
+:::tip
+其中，TC 是 Seata 服务端，需要独立部署。TM、RM 是嵌入应用侧的 Seata 客户端，通过动态代理后的 `DataSource` 和 `@GlobalTransactional` 注解实现。
+:::
 
 ### Seata 分布式事务模型
-一个分布式的全局事务，整体是『两阶段提交』的模型。一个全局事务由若干分支事务组成，全局事务和分支事务都需要满足两阶段提交模型。
-- 一阶段 prepare 行为  
-- 二阶段 commit 或 rollback 行为  
+一个分布式的全局事务，整体是『两阶段提交』的模型。如下图所示。
+<img width="800"
+  src={require('/resources/doc/21-pangu-framework-transaction.png').default}
+  alt="虚拟业务场景设计" />
 
-如下图所示（*图示来自 Seata 官网*）。
-![Seata 事务模型](/resources/doc/21-pangu-framework-transaction.png)
+Seata 为用户提供了 AT、TCC、SAGA 和 XA 四种事务模式。如下所述。
 
-根据两阶段行为模式的不同，我们将分支事务划分为 Automatic (Branch) Transaction Mode 和 TCC (Branch) Transaction Mode.
 ### AT 模式
-AT 模式下，Seata会代理数据源，在执行业务SQL的时候解析SQL并生成必要的回滚日志到`undo_log`表，如果需要回滚事务，则根据混滚日志自动生成补偿操作。
+AT（Automatic Transaction Mode） 模式下，Seata会代理数据源，在执行业务SQL的时候解析SQL并生成必要的回滚日志到`undo_log`表，如果需要回滚事务，则根据混滚日志自动生成补偿操作。
 - 一阶段 prepare 行为：在本地事务中，一并提交业务数据更新和自动生成相应回滚日志记录。
 - 二阶段 commit 行为：成功结束，自动异步批量清理回滚日志。
 - 二阶段 rollback 行为：通过回滚日志，自动生成补偿操作，完成数据回滚。
 
 ### TCC 模式
-
+TCC （Manual Transaction Mode） 模式也可以简单的认为是 MT 模式，即手动模式。TCC 模式的作用范围在应用层，依赖用户自行实现的3个方法『try()、confirm()、cancel()』。本质上是实现针对某种业务逻辑的正向和反向方法，成本较大。
 - 一阶段 prepare 行为：调用**自定义**的 prepare 逻辑。
 - 二阶段 commit 行为：调用**自定义**的 commit 逻辑。
 - 二阶段 rollback 行为：调用**自定义**的 rollback 逻辑。
@@ -64,8 +78,12 @@ AT 模式下，Seata会代理数据源，在执行业务SQL的时候解析SQL并
 ### 其它模式
 本文不再对 Seata 提供的 SAGA 和 XA 事务模式进行描述。
 
-:::tip 提示
-目前，我们认为 Seata 框架的 AT 模式在并发性能、易用性、成熟度等方面达到了一个很好的平衡。因此，在盘古开发分布式事务场景下，我们也优先使用 AT（Automatic Branch Transaction Mode）模式进行开发。
+:::caution 说明
+本质上，Seata 的3大事务模式（ AT、TCC、SAGA ）都是补偿型的。事务处理机制构建在框架自身或业务应用中。事务资源（数据库等）本身对分布式事务是无感知的。而在 XA 模式下，是有感知的，相应事务资源需要实现对 XA 协议的支持，以 XA 协议的机制来管理分支事务。
+:::
+
+:::info 建议
+目前，我们认为 Seata 框架的 AT 模式在并发性能、易用性、成熟度等方面达到了一个很好的平衡。因此，在盘古开发分布式事务场景下，我们将 AT 模式作为默认方案，用 TCC 模式作为补充方案。
 :::
 
 ## 虚拟业务场景设计
@@ -129,7 +147,7 @@ public interface StockService {
 - pangu-examples-seata-at-main：商品购买业务模块
 
 ### 初始化数据库环境
-真实环境中，订单服务、账户服务、库存服务有可能是分别对应不同的三个数据库。但范例为了简便，将使用同一个数据库，订单、账户、库存分属不通的微服务模块，使用不通的数据源对象，并不影响分布式事务测试效果。
+>在真实环境中，订单服务、账户服务、库存服务有可能是分别对应不同的三个数据库。但本文范例为了简便，将使用同一个数据库。但订单、账户、库存分属不通的微服务模块，使用不通的数据源对象，来达到模拟分布式事务测试效果。
 
 Seata 的 AT 模式依赖回滚日志完成业务反向补偿，因此每个业务库中都需要增加一个 `undo_log` 回滚日志表。
 
@@ -399,8 +417,8 @@ public class StockServiceImpl implements StockService {
 
 ## 测试
 
-### 启动事务协调者
-Seata 分 TC、TM 和 RM 三个角色，TC（Server端）为单独服务端部署，TM和RM（Client端）由业务系统集成。可通过官网下载TC（Server端）。通过如下脚本启动。
+### 启动Seata服务端（ TC ）
+可通过官网下载Seata服务端，通过如下脚本启动。
 ```jsx
 sh seata-server.sh -p 8091
 ```
@@ -408,7 +426,7 @@ sh seata-server.sh -p 8091
 ### 启动微服务
 分别启动订单服务、账户服务、库存服务。需追加如下启动脚本参数。
 ```jsx
--Dnacos.server-addr=130.155.46.45:8888 -Dnacos.namespace=pangu-dev
+-Dnacos.server-addr=10.155.46.45:8888 -Dnacos.namespace=pangu-dev
 ```
 
 ### 执行测试用例
