--- a/pangu-website/docs/社区.md
+++ b/pangu-website/docs/社区.md
@@ -18,7 +18,7 @@ slug: /community
   src={require('/resources/wx.jpeg').default}
   alt="普蓝开源社区微信群" />   
 
- :kiss: 加入微信群可以先加我微信
+ :kiss: 加我微信，拉你进开发者社区群。
 
 ## 作者联系方式
 
