--- a/pangu-website/docs/advanced-guide/分布式事务.md
+++ b/pangu-website/docs/advanced-guide/分布式事务.md
@@ -27,7 +27,7 @@ import TabItem from '@theme/TabItem';
 - **基于业务逻辑和应用场景最小化分布式事务边界**  
 言外之意就是说不要没事找事故意挖坑，人为的去制造没必要的分布式事务场景。
 - **基于XA的强一致性事务**  
-XA模式是传统的分布式强一致性的解决方案，性能较低，在实际业务中使用较少，本文不做更多讨论。
+XA模式是传统的强一致性分布式事务解决方案，性能较低，在实际业务中使用较少，本文不做更多讨论。
 - **追求最终一致性的柔性事务**  
 柔性事务通过放宽对强一致性要求，而是通过反向补偿来达到最终一致性，同时换取系统吞吐量的提升。目前，Seata框架提供了多种事务管理模式来支持柔性事务的落地实现。（详见后续章节）
 
@@ -83,7 +83,7 @@ TCC （Manual Transaction Mode） 模式也可以简单的认为是 MT 模式，
 :::
 
 :::info 建议
-目前，我们认为 Seata 框架的 AT 模式在并发性能、易用性、成熟度等方面达到了一个很好的平衡。因此，在盘古开发分布式事务场景下，我们将 AT 模式作为默认方案，用 TCC 模式作为补充方案。
+目前，我们认为 Seata 框架的 AT 模式在并发性能、易用性、成熟度等方面达到了一个很好的平衡。因此，在盘古开发分布式事务场景下，我们将 AT 模式作为默认方案，把 TCC 模式作为补充方案。
 :::
 
 ## 虚拟业务场景设计
