--- a/pangu-website/docs/quick-start/网关开发模式简介.md
+++ b/pangu-website/docs/quick-start/网关开发模式简介.md
@@ -7,24 +7,26 @@ slug: /quick-start/how-to-make-gateway-app
 
 # 网关开发模式简介
 
-在上文[《如何开发微服务应用》](/docs/quick-start/how-to-make-microservice-architecture-app)中，我们已经介绍了如何开发一个微服务应用以及微服务模块之间的互相调用。在盘古框架体系下，进行网关开发（将微服务接口发布为WebAPI）有两种方式。
+在上文[《如何开发微服务应用》](/docs/quick-start/how-to-make-microservice-architecture-app)中，我们已经介绍了如何开发一个微服务应用以及微服务模块之间的互相调用。在盘古框架体系下，进行网关开发（将微服务接口发布为 WebAPI ）有两种方式。
 
-### 基于SpringMVC的简单网关开发  
-依赖Servlet容器，需要引入服务接口包。基于SpringMVC通过Controller调用后端Dubbo服务。严格意义上说，这并非标准的网关，只是一种简单快速直接的将微服务通过Controller包装为WebAPI的方式。诸如鉴权一类的需求都需要自己用Web拦截器来实现。
+### 基于 SpringMVC 的简单网关开发  
+依赖 Servlet 容器，需要引入服务接口包。基于 SpringMVC 通过 Controller 调用后端 Dubbo 服务。严格意义上说，这并非标准的网关，只是一种简单快速直接的将后端 Dubbo 服务通过 Controller 包装为 WebAPI 的方式。诸如鉴权一类的需求都需要自己用Web拦截器来实现。  
+:boom: &nbsp;了解更多：[如何开发网关（ SpringMVC ）](/docs/quick-start/how-to-make-gateway-app/springmvc-based)
 
-### 基于ShenYu的专业网关开发
-依赖Netty不需要Servlet容器，不需要引入服务接口包。基于Webflex非阻塞模型通过Dubbo泛化调用后端服务。同时网关支持鉴权、动态限流、熔断、防火墙；支持A/B Test，灰度发布等。
+### 基于 ShenYu 的专业网关开发
+依赖 Netty 不需要 Servlet 容器，不需要引入服务接口包。基于 Webflex 非阻塞模型通过 Dubbo 泛化调用后端服务。同时网关支持鉴权、动态限流、熔断、防火墙；支持 A/B Test，灰度发布等。  
+:kiss: &nbsp;了解更多：[如何开发网关（ ShenYu ）](/docs/quick-start/how-to-make-gateway-app/shenyu-based)
 
 ## 开发模式对比
 
-|<div style={{width:'100px'}}>-</div>| 基于SpringMVC | 基于Apache ShenYu  
+|<div style={{width:'100px'}}>-</div>| 基于 SpringMVC | 基于 Apache ShenYu  
 --- | --- | ---
-底层技术 | Servlet阻塞模型，依赖Servlet容器 | Webflex非阻塞模型，依赖Netty
+底层技术 | Servlet 阻塞模型，依赖 Servlet 容器 | Webflex 非阻塞模型，依赖 Netty
 性能 | 一般 | 流量配置动态化，性能极高，网关消耗在 1~2ms
 复杂度 | 简单直接 | 开发部署运维相对复杂
-Dubbo集成 | 依赖服务接口JAR，显式调用Dubbo接口 | 不依赖服务接口JAR，支持Dubbo泛化调用,还兼容其他主流RPC框架（gRPC、Tars等）
+Dubbo 集成 | 依赖服务接口 JAR ，显式调用 Dubbo 接口 | 不依赖服务接口 JAR，支持 Dubbo 泛化调用,还兼容其他主流 RPC 框架（ gRPC、Tars 等）
 流控 | 无或需自主开发 | 灵活的流量筛选，能满足各种流量控制的限流需求
-其它特性 | 无或需自主开发 | 支持鉴权、熔断、防火墙；支持A/B Test、灰度发布等
+其它特性 | 无或需自主开发 | 支持鉴权、熔断、防火墙；支持 A/B Test、灰度发布等
 
 :::caution
 上表是从不同维度简单粗暴的以定量或定性的角度给出了一些比较，结论是孤立的脱离项目背景和业务场景的，仅供参考。采用什么样的架构开发模式不能一概而论，需要大家综合当下实际情况酌情选择。
