--- a/pangu-website/docs/advanced-guide/分布式事务.md
+++ b/pangu-website/docs/advanced-guide/分布式事务.md
@@ -27,9 +27,9 @@ import TabItem from '@theme/TabItem';
 - **基于业务逻辑和应用场景最小化分布式事务边界**  
 言外之意就是说不要没事找事故意挖坑，人为的去制造没必要的分布式事务场景。
 - **基于XA的强一致性事务**  
-XA模式是传统的强一致性分布式事务解决方案，性能较低，在实际业务中使用较少，本文不做更多讨论。
+XA模式是传统的强一致性分布式事务解决方案，性能较低且锁资源竞争突出。在实际业务中使用较少，本文不做更多讨论。
 - **追求最终一致性的柔性事务**  
-柔性事务通过放宽对强一致性要求，而是通过反向补偿来达到最终一致性，同时换取系统吞吐量的提升。目前，Seata框架提供了多种事务管理模式来支持柔性事务的落地实现。（详见后续章节）
+柔性事务通过放宽对强一致性要求，而是通过反向补偿来达到最终一致性，同时换取系统吞吐量的提升和缓解锁资源竞争。目前，Seata框架提供了多种事务管理模式来支持柔性事务的落地实现。（详见后续章节）
 
 <details>
   <summary><b>快速QA：</b>在单体架构的应用中也会有分布式事务吗？</summary>
