开发读写分离范例程序：pangu-examples-shardingsphere-readwrite-splitting，编写读写分离文档

--- a/pangu-website/docs/advanced-guide/读写分离.md
+++ b/pangu-website/docs/advanced-guide/读写分离.md
@@ -198,67 +198,54 @@ logging.level.com.gitee.pulanos.pangu=INFO
 
 ### 主要逻辑代码
 
+#### 读操作自动走从库负载均衡
 ```jsx
-public class ReadWriteSplittingService {
+public void readRoute() {
+	log.info("查询数据...");
+	UserEntity userEntity = userMapper.selectById(1L);
+	log.info("查询结果 {}", userEntity);
+}
+```
 
-    @Autowired
-    private UserMapper userMapper;
+#### 读操作强制走主库
+```jsx
+public void readByWriteRoute() {
+	HintManager hintManager = HintManager.getInstance();
+	hintManager.setWriteRouteOnly();
+	try {
+		log.info("查询数据（强制走主库）...");
+		UserEntity userEntity = userMapper.selectById(1L);
+		log.info("查询结果 {}", userEntity);
+	} finally {
+		hintManager.close();
+	}
+}
+```
 
-    /**
-     * 读请求理由到从库（多从库则根据算法负载均衡）
-     */
-    public void readRoute() {
-        log.info("查询数据...");
-        UserEntity userEntity = userMapper.selectById(1L);
-        log.info("查询结果 {}", userEntity);
-    }
+#### 写操作自动走主库
+```jsx
+public int writeRoute() {
+	log.info("插入数据...");
+	UserEntity userEntity = new UserEntity();
+	userEntity.setName("XC").setAge(18).setUserType("1");
+	int row = userMapper.insert(userEntity);
+	log.info("成功插入{}条数据。{}", row, userEntity);
+	return row;
+}
+```
 
-    /**
-     * 演示手动强制走主库查询
-     */
-    public void readByWriteRoute() {
-        HintManager hintManager = HintManager.getInstance();
-        hintManager.setWriteRouteOnly();
-        try {
-            log.info("查询数据（强制走主库）...");
-            UserEntity userEntity = userMapper.selectById(1L);
-            log.info("查询结果 {}", userEntity);
-        } finally {
-            hintManager.close();
-        }
-    }
-
-
-    /**
-     * 写请求路由到主库
-     *
-     * @return
-     */
-    public int writeRoute() {
-        log.info("插入数据...");
-        UserEntity userEntity = new UserEntity();
-        userEntity.setName("XC").setAge(18).setUserType("1");
-        int row = userMapper.insert(userEntity);
-        log.info("成功插入{}条数据。{}", row, userEntity);
-        return row;
-    }
-
-    /**
-     * 事务内的所有读写请求都自动路由到主库
-     *
-     * @return
-     */
-    @Transactional(rollbackFor = RuntimeException.class)
-    public void doWithTransaction() {
-        log.info("插入数据...");
-        UserEntity userEntity = new UserEntity();
-        userEntity.setName("XC").setAge(18).setUserType("1");
-        int row = userMapper.insert(userEntity);
-        log.info("成功插入{}条数据。{}", row, userEntity);
-        log.info("查询数据（强制走主库）...");
-        UserEntity userEntityRead = userMapper.selectById(1L);
-        log.info("查询结果 {}", userEntityRead);
-    }
+#### 事务方法里的所有读写操作都自动走主库
+```jsx
+@Transactional(rollbackFor = RuntimeException.class)
+public void doWithTransaction() {
+	log.info("插入数据...");
+	UserEntity userEntity = new UserEntity();
+	userEntity.setName("XC").setAge(18).setUserType("1");
+	int row = userMapper.insert(userEntity);
+	log.info("成功插入{}条数据。{}", row, userEntity);
+	log.info("查询数据（强制走主库）...");
+	UserEntity userEntityRead = userMapper.selectById(1L);
+	log.info("查询结果 {}", userEntityRead);
 }
 ```
 
