开发读写分离范例程序：pangu-examples-shardingsphere-readwrite-splitting，编写读写分离文档

--- a/pangu-website/docs/advanced-guide/读写分离.md
+++ b/pangu-website/docs/advanced-guide/读写分离.md
@@ -42,8 +42,8 @@ import TabItem from '@theme/TabItem';
 通过 ORM 框架（Hibernate、Mybatis 等）的插件、拦截器机制实现。这只能算是特定环境下的一种实现方法，不能作为一套完整的标准化解决方案。故在此不做更多描述。
 
 ### 技术方案指标对比
-### 
-|<div style={{width:'120px'}}>技术方案</div>| <div style={{width:'170px'}}>可选组件</div>| 优点 | 缺点
+ 
+|<div style={{width:'120px'}}>技术方案</div>| 可选组件 | <div style={{width:'150px'}}>优点</div> | <div style={{width:'200px'}}>缺点</div>
 --- | --- | --- | ---
 **数据库代理模式** | ShardingSphere-Proxy <br></br> MyCat | 多语言支持<br></br>独立部署（升级简单）<br></br>对开发完全透明 | 独立部署（增加不稳定因素）<br></br> 运维成本高<br></br>性能损耗高
 **数据源代理模式 :kiss: ** | ShardingSphere-JDBC | 集成简单、轻松驾驭<br></br>性能较好 | 嵌入JAR（升级麻烦）<br></br>日常数据维护麻烦
